# image_match_tool_hdw

./: .gitignore  .gitmodules  README.md  pyproject.toml
config/matchers/: sift_nn.yaml
examples/: match_pair.py  match_pair_gui.py
src/matcher_hdw/: __init__.py  api.py  cache.py  factory.py  geometry.py  schema.py  visualization.py
src/matcher_hdw/extractors/: __init__.py  base.py  sift.py
src/matcher_hdw/matchers/: __init__.py  base.py  nearest_neighbor.py
src/matcher_hdw/pipelines/: __init__.py  sparse_pipeline.py
