[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matcher-hdw"
version = "0.1.0"
description = "Reusable image matching backend for stitching experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "PyYAML",
]

[project.optional-dependencies]
test = ["pytest"]
gui = ["dearpygui"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
